# graph-jira

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
docker/: Dockerfile
src/: app.py  graph2plotly.py  net_tools.py  types_.py
tests/: test_net_tools.py
